--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="splash">
       <p>
         <img align="left" width="41" height="54" class="mached" src="{{
-        url_for('static', filename='athena.png') }}">
+        url_for('static', filename='prao.jpg') }}">
         <span class="newthought">{{ config.title }}</span><br />
         {{ config.indexdesc }}
       </p>
@@ -33,7 +33,6 @@
               </a> ·
             </li>
          {% endfor %}
-        <li><a href="{{ url_for("recent_feed") }}">subscribe</a></li>
       </ul>
     </div> <!-- navigation end -->
   </div> <!-- header end -->
@@ -56,7 +55,7 @@
 
   <div class="thefooter">
     <p>{{ config.footer }}
-      <br><br>Copyright, <i>2016</i>
+      <br><br>Copyright, <i>2017</i>
     </p>
   </div> <!-- footer end -->
 </body>
